--- a/app/assets/stylesheets/components/_dogs_show.scss
+++ b/app/assets/stylesheets/components/_dogs_show.scss
@@ -9,10 +9,10 @@
   width: 70%;
   text-align: center;
   height: 683px;
-  margin-top:55px;
+  margin-top: 55px;
   overflow: hidden;
   background: white;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   margin-bottom: 150px;
   justify-content: center;
   align-items: center;
@@ -21,7 +21,7 @@
 .btn {
   margin-bottom: 20px;
 }
-.card-trip-infos{
+.card-trip-infos {
   margin: auto;
   width: 50%;
   // display: flex;
@@ -37,8 +37,8 @@
   border-radius: 3px;
 }
 .card-trip > img {
-  height: 200px;
-  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
   object-fit: cover;
 }
 .card-trip h2 {
@@ -48,10 +48,10 @@
   font-weight: bold;
   margin-bottom: 11px;
 }
-  .card-trip p {
-    font-size:20px;
-    opacity: .7;
-    margin-bottom: 4px;
+.card-trip p {
+  font-size: 20px;
+  opacity: 0.7;
+  margin-bottom: 4px;
 }
 .card-trip .card-trip-infos {
   padding: 16px;
@@ -87,9 +87,9 @@
   margin-top: 130px;
   height: 360px;
   width: 43%;
-  border-radius: 10px;
+  border-radius: 0px;
   #grad {
-    background-image: linear-gradient(to right, red , yellow);
+    background-image: linear-gradient(to right, red, yellow);
   }
 }
 
@@ -97,4 +97,14 @@
   width: 340px;
   height: 340px;
   background-color: white;
+}
+
+.carousel-item img {
+  // height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+  height: 340px;
+  width: 340px;
+  overflow: hidden;
+  border-radius: 0px;
 }
